<resources>
    <string name="app_name">RickNMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="main_theme">Main theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="language">Language</string>
</resources>