<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/charactersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/characters"/>
    <item
        android:id="@+id/locationsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_grass_24"
        android:title="@string/locations"/>
    <item
        android:id="@+id/episodesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/episodes"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/episodes"/>
</menu>