<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_theme_txt"
        android:layout_marginTop="20sp"
        android:text="@string/main_theme"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/main_theme_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/light"
        android:textAllCaps="false"
        android:layout_marginTop="20sp"
        android:id="@+id/light_theme_btn"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/light_theme_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/dark_theme_btn"
        android:text="@string/dark"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_txt"
        android:layout_marginTop="50sp"
        android:text="@string/language"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_theme_btn" />

    <Button
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/language_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20sp"
        android:text="@string/russian"
        android:textAllCaps="false"
        android:id="@+id/russ_lang_btn"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/russ_lang_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/eng_lang_btn"
        android:text="@string/english"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>